--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -45,6 +46,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-FACEBOOK_APP_ID=545749210500718
-FACEBOOK_APP_SECRET=85c7a040a1b4d9dc2626dcb2e9e27ff9
-FACEBOOK_APP_CALLBACK_URL=http://127.0.0.1:8000/signin/checkInfoFacebook/facebook
+FACEBOOK_CLIENT_ID="1221073151765386"
+FACEBOOK_CLIENT_SECRET="8104ee697cc8ac351d991576b24bf0ee"
+
+GOOGLE_CLIENT_ID="407471754495-oehp18p14n0g39ac8eqeq9t40nl5o3r3.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
